<resources>
    <string name="app_name">On The Way</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="title_activity_customer_res">CustomerRes</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="first_name_reg">First name</string>
    <string name="last_name_reg">Last name</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search_anything">Search anything</string>
    <string name="what_do_you_want">What Do You Want?</string>
    <string name="user_photo">User Photo</string>
    <string name="name">Name</string>
    <string name="john_doe">John Doe</string>
    <string name="items">Items</string>
</resources>